--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Dhili Properties & Developers</title>
+        <link rel="stylesheet" href="css/css-style.css"/>
+    </head> 
+    <body>
+        <nav class="top-header">
+            <div class="header-container header-area">
+                <div class="header-logo">
+                    <a href="#">
+                        <img class="logo-image" src="logo.png" alt="Logo" height="70px"/>
+                    </a>
+                </div>
+                <div class="menu-icon">
+                    <p>Menu</p>
+                </div>
+                <div class="nav-links">
+                    <a href="index.html">Home</a>
+                    <a href="Projects.html">Projects</a>
+                    <a href="#">Services</a>
+                    <a href="#">Contact Us</a>
+                </div>
+            </div>
+        </nav>
+        <div class="welcome-container">
+            <div class="welcome-items">
+                <div class="welcome-main-text"><h1>Dhili Properties and Developers</h1></div>
+                <div class="welcome-main-quotes"><h3>We transform your homes from vision to reality</h3></div>
+                <!-- <a class="welcome-btn" href="#">Read more</a> -->
+            </div>
+        </div>
+        <div class="main-container-full">
+            <div class="main-area">
+                <h2>Accomplished Dreams</h2>
+                <div class="main-items">
+                    <div class="projects">
+                        <img class="main-item-img" src="./images/Main/IMG4.jpg" alt="HomeImg"/>
+                    </div>
+                    <div class="projects">
+                        <img class="main-item-img" src="./images/Main/IMG5.png" alt="HomeImg"/>
+                    </div>
+                    <div class="projects">
+                        <img class="main-item-img" src="./images/Main/IMG6.png" alt="HomeImg"/>
+                    </div>
+                    <div class="projects">
+                        <img class="main-item-img" src="./images/Main/IMG3.jpg" alt="HomeImg"/>
+                    </div>
+                    <div class="projects">
+                        <img class="main-item-img" src="./images/Main/IMG1.jpg" alt="HomeImg"/>
+                    </div>
+                    <div class="projects">
+                        <img class="main-item-img" src="./images/Main/IMG2.jpg" alt="HomeImg"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-container">
+            <div class="footer-items main-area">
+                <p>@ Copyright Dhilli Properties & Developers - All Rights Reserver. 2023</p>
+            </div>
+        </div>
+    </body>
+</html>
