--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="index.html">Home</a>
                     <a href="Projects.html">Projects</a>
                     <a href="#">Services</a>
-                    <a href="#">Contact Us</a>
+                    <a href="contactus.html">Contact Us</a>
                 </div>
             </div>
         </nav>
