--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Dhili Properties & Developers</title>
+        <title>Dhilli Properties & Developers</title>
         <link rel="stylesheet" href="css/css-style.css"/>
         <script>
             function myFunction() {
@@ -38,7 +38,7 @@
         </nav>
         <div class="welcome-container">
             <div class="welcome-items">
-                <div class="welcome-main-text"><h1>Dhili Properties and Developers</h1></div>
+                <div class="welcome-main-text"><h1>Dhilli Properties and Developers</h1></div>
                 <div class="welcome-main-quotes"><h3>We transform your homes from vision to reality</h3></div>
             </div>
         </div>
